build: remove vector preview; add file.encoding=UTF-8